--- a/poo.html
+++ b/poo.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2022 - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2023 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
 				<span>Prof. Dr. Eduardo Cunha Campos</span>
 			</div>
@@ -79,35 +79,35 @@
 					<div>
 					<b>Plano e Material extra:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/poo/plano_pc2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/poo/plano_pc2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					</ul>
 					</div>
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(13/09)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
-					<li>Prova 2 - 30 pts <b>(18/10)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)</li>
-					<li>Prova 3 - 30 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)</li>
-					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<!--<li>Lista 01 - 7,5 pts <b>(18/10)</b></li>-->
-					<!--<li>Lista 02 - 7,5 pts <b>(06/12)</b></li>-->
-					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>		
+					<li>Prova 1 - 30 pts <b>(04/04)</b> <!--<img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)--></li>
+					<li>Prova 2 - 30 pts <b>(09/05)</b> <!--<img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)--></li>
+					<li>Prova 3 - 30 pts <b>(20/06)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
+					<!--<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Lista 01 - 5 pts <b>(09/05)</b></li>
+					<li>Lista 02 - 5 pts <b>(20/06)</b></li>
+					<!--<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>		
 					</ul>
 					</div>  
 					<b>Material:</b> 
 					<div>
 						<ul>	
-						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução a POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=MRGMFrZ81I4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/g4DSfdpz0d4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=2_cv_UWmumY"> Ver Videoaula </a>)</li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução a POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=MRGMFrZ81I4"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/g4DSfdpz0d4"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=2_cv_UWmumY"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>)</li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
