--- a/gsi526.html
+++ b/gsi526.html
@@ -81,7 +81,7 @@
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/Plano Didático - ES.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2023-1.pdf"> Temas de TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC (2022.2)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div> 
