--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -90,7 +90,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Roteiro prático - 30 pts <b>(24/05)</b> <i><a href="aulas/lab-programacao/Roteiro-Trabalho1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
+					<li>Roteiro prático - 30 pts <b>(24/05)</b> <!--<i><a href="aulas/lab-programacao/Roteiro-Trabalho1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a>--></li>
 					<li>Trabalho 2 - 70 pts <b>(05/07)</b> <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
 					<!--<li>Trabalho 3 - 30 pts <b>(01/09)</b> </li>
 					<li>Vídeo - 10 pts <b>(01/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li> -->
