--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -169,7 +169,7 @@
 					<li><a href="https://www.youtube.com/watch?v=LZsjuSBW5YM&list=PLnDvRpP8BnewqnMzRnBT5LeTpld5bMvsj&index=1"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso de Django 2 Web Framework</a></li>
 					<li><a href="https://www.youtube.com/watch?v=K0pVZmw_pJU"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Criando um Blog com Python e o framework Django</a></li>
 					<li><a href="https://evolutio.io/curso/flask_by_juliarizza"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso de Flask para Completos Iniciantes</a></li>
-					<li><a href="https://www.youtube.com/watch?v=brSwmLQA0iA"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Primeiros passos com Node.js - Parte 1</a></li>
+					<li><a href="https://www.youtube.com/watch?v=fm4_EuCsQwg"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Primeiros passos com Node.js - Parte 1</a></li>
 					<li><a href="https://evolutio.io/curso/ngmasters_javascript"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso Completo de JavaScript</a></li>
 					<li><a href="https://evolutio.io/curso/minicurso_vuejs"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso de Vue.js para Completos Iniciantes</a></li>
 					<li><a href="https://www.youtube.com/watch?v=ErjWNvP6mko"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso de React para Completos Iniciantes</a></li>
