--- a/poo-virtual.html
+++ b/poo-virtual.html
@@ -70,7 +70,7 @@
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<span>Disciplinas 1º Semestre de 2023 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
-				<span>Prof. Dr. Eduardo Cunha Campos</span>
+				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
 		</div>
 		<div id="fh5co-main-content">
