--- a/poo-lab.html
+++ b/poo-lab.html
@@ -89,13 +89,13 @@
 					<b>Monitoria e Grupos do Trabalho:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>				
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>-->
 					</div>					
@@ -115,11 +115,11 @@
 					<div>					
 					<b>Material:</b> 
 					<ul>						
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/3s7G6f0yX2U"> Ver Videoaula </a>)--></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/q0ggF0xgcqU"> Ver Videoaula </a>)--></li>					
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/PY5hcxTVCCg"> Ver Videoaula </a>)--></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gKJXrID8iEY"> Ver Videoaula </a>)--></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/sRFBjxgZXBs"> Ver Videoaula </a>)--></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/3s7G6f0yX2U"> Ver Videoaula </a>)</li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/q0ggF0xgcqU"> Ver Videoaula </a>)</li>					
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/PY5hcxTVCCg"> Ver Videoaula </a>)</li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gKJXrID8iEY"> Ver Videoaula </a>)</li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/sRFBjxgZXBs"> Ver Videoaula </a>)--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/UViaEASkcXQ"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/myKvJ2Mtgnw"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/94g9WaSeh7s"> Ver Videoaula </a>)</li>
