--- a/gsi526.html
+++ b/gsi526.html
@@ -88,7 +88,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(10/04)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04 e 05</i>--></li>
+					<li>Prova 1 - 30 pts <b>(10/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 01, 02, 03, 04 e 05</i></li>
 					<li>Prova 2 - 30 pts <b>(18/05)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 06, 07, 08, 09 e 10</i>--></li>
 					<li>Prova 3 - 30 pts <b>(26/06)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 11, 12, 13, 14, 15 e 16</i>--></li>
 					<li>Lista 1 - 2 pts <b>(10/04)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
